--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -14,10 +14,17 @@
     "composite": true,
     "types": [
       "vitest/importMeta"
-    ]
+    ],
+    "paths": {
+      "@lattice/signals": ["../signals/src/index.ts"],
+      "@lattice/signals/*": ["../signals/src/*"]
+    }
   },
   "include": [
     "src/**/*.ts",
     "testing/**/*.ts"
   ],
+  "references": [
+    { "path": "../signals" }
+  ]
 }
