add devtools example

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "type": "module",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "packages/examples/*"
   ],
   "scripts": {
     "build": "lerna run build",
@@ -19,7 +20,8 @@
     "test": "lerna run test",
     "bench": "pnpm --filter @lattice/benchmarks bench",
     "bench:ci": "pnpm --filter @lattice/benchmarks bench:ci",
-    "bench:compare": "pnpm --filter @lattice/benchmarks bench:compare"
+    "bench:compare": "pnpm --filter @lattice/benchmarks bench:compare",
+    "example:devtools": "pnpm --filter @lattice/example-devtools dev"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
