--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -21,15 +21,26 @@
     "@lattice/core": "workspace:*",
     "@lattice/devtools": "workspace:*",
     "@lattice/signals": "workspace:*",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/chrome": "^0.0.331",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@wxt-dev/module-react": "^1.1.3",
     "globals": "^16.3.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "wxt": "^0.20.6"
   }
