chore: Update build configuration and dependencies
- Remove unused popup extension entry point
- Update package dependencies for UI components
- Fix ESLint configuration for better code quality
- Add TypeScript configuration for examples
- Update vite configuration for proper builds
- Clean up package.json scripts

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev:devtools": "cd ./devtools && pnpm dev",
     "build:devtools": "pnpm --filter ./devtools build",
-    "preview:devtools": "pnpm --filter ./devtools preview"
+    "preview:devtools": "pnpm --filter ./devtools preview",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx",
+    "check": "pnpm typecheck && pnpm lint"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
