--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -21,6 +21,7 @@
     "@lattice/core": "workspace:*",
     "@lattice/devtools": "workspace:*",
     "@lattice/signals": "workspace:*",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -30,6 +31,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-resizable-panels": "^3.0.3",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5"
   },
