remove duplicate core/signal types and update ts check

--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -28,7 +28,8 @@
     "check": "pnpm typecheck && pnpm lint"
   },
   "dependencies": {
-    "@lattice/core": "workspace:*"
+    "@lattice/core": "workspace:*",
+    "@lattice/signals": "workspace:*"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
