--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -28,7 +28,7 @@
     "check": "pnpm typecheck && pnpm lint"
   },
   "dependencies": {
-    "@lattice/core": "workspace:*",
+    "@lattice/lattice": "workspace:*",
     "@lattice/signals": "workspace:*"
   },
   "devDependencies": {
