--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -16,7 +16,7 @@
     "check": "pnpm typecheck && pnpm lint"
   },
   "devDependencies": {
-    "@lattice/core": "workspace:*",
+    "@lattice/lattice": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@preact/signals-core": "^1.8.0",
     "@reduxjs/toolkit": "^2.8.2",
