--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "bench": "pnpm --filter @lattice/benchmarks bench",
     "bench:ci": "pnpm --filter @lattice/benchmarks bench:ci",
     "bench:compare": "pnpm --filter @lattice/benchmarks bench:compare",
-    "example:devtools": "pnpm --filter @lattice/example-devtools dev"
+    "example:devtools": "pnpm --filter @lattice/example-devtools dev",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "pnpm build && changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@eslint/js": "^9.25.0",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
