--- a/packages/devtools/tsconfig.json
+++ b/packages/devtools/tsconfig.json
@@ -20,7 +20,8 @@
     }
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "vite.config.ts"
   ],
   "references": [
     { "path": "../lattice" },
