--- a/packages/lattice/tsconfig.json
+++ b/packages/lattice/tsconfig.json
@@ -18,7 +18,9 @@
   },
   "include": [
     "src/**/*.ts",
-    "testing/**/*.ts"
+    "testing/**/*.ts",
+    "vite.config.ts",
+    "vitest.config.ts"
   ],
   "references": [
     { "path": "../signals" }
