--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -20,7 +20,9 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    "vite.config.ts",
+    "vitest.config.ts"
   ],
   "references": [
     { "path": "../signals" },
