--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -12,6 +12,10 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./type-guards": {
+      "import": "./dist/type-guards.js",
+      "types": "./dist/type-guards.d.ts"
     }
   },
   "files": [
@@ -30,6 +34,7 @@
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
+    "terser": "^5.36.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vite-plugin-dts": "^4.5.4",
