--- a/packages/devtools-extension/tsconfig.json
+++ b/packages/devtools-extension/tsconfig.json
@@ -6,6 +6,8 @@
     "types": ["chrome"],
     "baseUrl": ".",
     "skipLibCheck": true,
+    "strict": false,
+    "noImplicitAny": false,
     "paths": {
       "@/*": ["./src/*"],
       "@lattice/lattice": ["../lattice/src/index.ts"],
