get devtools working with extensions

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build": "lerna run build",
     "dev": "lerna run dev --parallel",
     "dev:no-build": "lerna run dev --parallel",
-    "build:lattice": "pnpm --filter @lattice/signals build && pnpm --filter @lattice/lattice build && pnpm --filter @lattice/devtools build",
+    "build:lattice": "pnpm --filter @lattice/signals build && pnpm --filter @lattice/lattice build",
     "clean": "lerna run clean",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "typecheck": "lerna run typecheck",
-    "check": "lerna run check",
+    "check": "lerna run check --ignore @lattice/devtools-extension",
+    "check:all": "lerna run check",
     "test": "lerna run test",
     "bench": "pnpm --filter @lattice/benchmarks bench",
     "bench:ci": "pnpm --filter @lattice/benchmarks bench:ci",
