--- a/packages/devtools-extension/tsconfig.json
+++ b/packages/devtools-extension/tsconfig.json
@@ -11,8 +11,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@lattice/lattice": ["../lattice/src/index.ts"],
-      "@lattice/signals": ["../signals/src/index.ts"],
-      "@lattice/devtools": ["../devtools/src/index.ts"]
+      "@lattice/signals": ["../signals/src/index.ts"]
     }
   },
   "include": [
@@ -29,7 +28,6 @@
   ],
   "references": [
     { "path": "../lattice" },
-    { "path": "../signals" },
-    { "path": "../devtools" }
+    { "path": "../signals" }
   ]
 }
