--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -18,8 +18,9 @@
   },
   "dependencies": {
     "@lattice/lattice": "workspace:*",
-    "@lattice/signals": "workspace:*",
     "@lattice/react": "workspace:*",
+    "@lattice/signals": "workspace:*",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
@@ -32,19 +33,20 @@
     "react-dom": "^19.1.0",
     "react-resizable-panels": "^3.0.3",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.5"
+    "tw-animate-css": "^1.3.5",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@types/chrome": "^0.0.331",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@vitest/ui": "^3.1.1",
     "@wxt-dev/module-react": "^1.1.3",
     "globals": "^16.3.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
-    "wxt": "^0.20.6",
     "vitest": "^3.1.1",
-    "@vitest/ui": "^3.1.1"
+    "wxt": "^0.20.6"
   }
 }
