--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lattice/lattice",
+  "name": "@lattice/store",
   "version": "0.0.1",
-  "description": "Core framework-agnostic behavior composition layer for Lattice components",
+  "description": "State management extensions for Lattice using signals",
   "author": "Lattice Team",
   "license": "MIT",
   "type": "module",
@@ -32,7 +32,10 @@
     "check": "pnpm typecheck && pnpm test && pnpm lint",
     "test": "vitest run"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@lattice/lattice": "workspace:*",
+    "@lattice/signals": "workspace:*"
+  },
   "devDependencies": {
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
