--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -17,7 +17,7 @@
     "check": "pnpm typecheck && pnpm lint"
   },
   "dependencies": {
-    "@lattice/lattice": "workspace:*",
+    "@lattice/store": "workspace:*",
     "@lattice/react": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@radix-ui/react-dialog": "^1.1.14",
