--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -26,6 +26,7 @@
   ],
   "references": [
     { "path": "../signals" },
-    { "path": "../lattice" }
+    { "path": "../lattice" },
+    { "path": "../signals-store" }
   ]
 }
