--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,6 +41,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@lattice/lattice": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@lattice/signals-store": "workspace:*"
   },
