--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "typecheck": "lerna run typecheck",
-    "check": "lerna run check --ignore @lattice/devtools-extension",
+    "check": "lerna run check",
     "check:all": "lerna run check",
     "test": "lerna run test",
     "bench": "pnpm --filter @lattice/benchmarks bench",
