--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -35,5 +35,8 @@
     "vitest": "^3.1.1",
     "vue": "^3.5.0",
     "zustand": "^5.0.3"
+  },
+  "dependencies": {
+    "alien-signals": "^2.0.5"
   }
 }
