--- a/packages/devtools-extension/tsconfig.json
+++ b/packages/devtools-extension/tsconfig.json
@@ -10,8 +10,7 @@
     "noImplicitAny": false,
     "paths": {
       "@/*": ["./src/*"],
-      "@lattice/lattice": ["../lattice/src/index.ts"],
-      "@lattice/signals": ["../signals/src/index.ts"]
+      "@lattice/lattice": ["../lattice/src/index.ts"]
     }
   },
   "include": [
