--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -30,6 +30,10 @@
       "import": "./dist/subscribe.js",
       "types": "./dist/subscribe.d.ts"
     },
+    "./reactive": {
+      "import": "./dist/reactive.js",
+      "types": "./dist/reactive.d.ts"
+    },
     "./types": {
       "import": "./dist/types.js",
       "types": "./dist/types.d.ts"
