--- a/package.json
+++ b/package.json
@@ -43,10 +43,15 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "tinypool": "^1.0.4"
+    }
   },
   "dependencies": {
     "zustand": "^5.0.3"
