--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -44,6 +44,7 @@
     "@vitest/ui": "^3.2.4",
     "@wxt-dev/module-react": "^1.1.3",
     "globals": "^16.3.0",
+    "vite": "^6.3.5",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4",
