bars and summaries

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -8,10 +8,8 @@
   "private": true,
   "scripts": {
     "build:all": "cd ../ && pnpm build && cd benchmarks",
-    "bench": "pnpm build:all && tsx --expose-gc src/suites/lattice/*.bench.ts",
+    "bench": "pnpm build:all && tsx --expose-gc run-all-benchmarks.ts",
     "bench:signals": "tsx --expose-gc src/suites/lattice/signals.bench.ts",
-    "bench:memory": "tsx --expose-gc src/suites/lattice/memory.bench.ts",
-    "bench:propagation": "tsx --expose-gc src/suites/lattice/propagation.bench.ts",
     "bench:push-pull": "tsx --expose-gc src/suites/lattice/push-pull.bench.ts",
     "bench:subscription": "tsx --expose-gc src/suites/lattice/subscription-throughput.bench.ts",
     "typecheck": "tsc --noEmit",
