--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -9,6 +9,18 @@
   "scripts": {
     "build:all": "cd ../ && pnpm build && cd benchmarks",
     "bench": "pnpm build:all && tsx --expose-gc src/runner.ts",
+    "bench:all": "pnpm build:all && tsx --expose-gc src/runner.ts",
+    "bench:quick": "tsx --expose-gc src/runner.ts",
+    "bench:diamond-deps": "tsx --expose-gc src/runner.ts diamond-deps",
+    "bench:dense-updates": "tsx --expose-gc src/runner.ts dense-updates",
+    "bench:batch-operations": "tsx --expose-gc src/runner.ts batch-operations",
+    "bench:computed-chains": "tsx --expose-gc src/runner.ts computed-chains",
+    "bench:signal-updates": "tsx --expose-gc src/runner.ts signal-updates",
+    "bench:effect-triggers": "tsx --expose-gc src/runner.ts effect-triggers",
+    "bench:scaling-subscribers": "tsx --expose-gc src/runner.ts scaling-subscribers",
+    "bench:wide-fanout": "tsx --expose-gc src/runner.ts wide-fanout",
+    "bench:sparse-updates": "tsx --expose-gc src/runner.ts sparse-updates",
+    "bench:frameworks": "tsx --expose-gc src/runner.ts frameworks",
     "bench:json": "tsx --expose-gc src/runner.ts",
     "bench:signals": "tsx --expose-gc src/suites/lattice/signals.bench.ts",
     "bench:push-pull": "tsx --expose-gc src/suites/lattice/push-pull.bench.ts",
