--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build:all": "cd ../ && pnpm build && cd benchmarks",
+    "build:all": "cd ../signals && pnpm test && pnpm build && cd ../benchmarks",
     "bench": "tsx --expose-gc src/runner.ts",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
