--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -47,17 +47,25 @@
       "import": "./dist/default-context.js",
       "types": "./dist/default-context.d.ts"
     },
-    "./helpers/work-queue": {
-      "import": "./dist/helpers/work-queue.js",
-      "types": "./dist/helpers/work-queue.d.ts"
+    "./helpers/node-scheduler": {
+      "import": "./dist/helpers/node-scheduler.js",
+      "types": "./dist/helpers/node-scheduler.d.ts"
     },
-    "./helpers/dependency-sweeper": {
-      "import": "./dist/helpers/dependency-sweeper.js",
-      "types": "./dist/helpers/dependency-sweeper.d.ts"
+    "./helpers/graph-edges": {
+      "import": "./dist/helpers/graph-edges.js",
+      "types": "./dist/helpers/graph-edges.d.ts"
     },
-    "./helpers/dependency-graph": {
-      "import": "./dist/helpers/dependency-graph.js",
-      "types": "./dist/helpers/dependency-graph.d.ts"
+    "./helpers/node-state": {
+      "import": "./dist/helpers/node-state.js",
+      "types": "./dist/helpers/node-state.d.ts"
+    },
+    "./helpers/push-propagator": {
+      "import": "./dist/helpers/push-propagator.js",
+      "types": "./dist/helpers/push-propagator.d.ts"
+    },
+    "./helpers/pull-propagator": {
+      "import": "./dist/helpers/pull-propagator.js",
+      "types": "./dist/helpers/pull-propagator.d.ts"
     }
   },
   "files": [
