--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "exclude": [
     "**/node_modules",
