--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-storybook": "^0.12.0",
     "lerna": "^8.2.2",
     "prettier": "^3.5.3",
+    "tdd-guard-vitest": "^0.1.5",
     "terser": "^5.36.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
