--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -84,6 +84,7 @@
     "alien-signals": "^2.0.5",
     "esbuild": "^0.25.8",
     "rimraf": "^6.0.1",
+    "tdd-guard-vitest": "^0.1.5",
     "terser": "^5.36.0",
     "typescript": "^5.8.3",
     "vite": "^7.1.1",
