gitignore TDD guard test.json file

--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,4 @@ public/
 *.ts.map
 
 **/.claude/settings.local.json
-reference-packages/**/*
+reference-packages/**/*packages/signals/.claude/tdd-guard/data/test.json
