--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -14,6 +14,7 @@
     "check": "pnpm typecheck && pnpm lint"
   },
   "devDependencies": {
+    "@lattice/lattice": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@preact/signals-core": "^1.8.0",
     "@reduxjs/toolkit": "^2.8.2",
