--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -37,6 +37,10 @@
     "./helpers/reconcile": {
       "import": "./dist/helpers/reconcile.js",
       "types": "./dist/helpers/reconcile.d.ts"
+    },
+    "./on": {
+      "import": "./dist/on.js",
+      "types": "./dist/on.d.ts"
     }
   },
   "files": [
