--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -45,6 +45,10 @@
     "./on": {
       "import": "./dist/on.js",
       "types": "./dist/on.d.ts"
+    },
+    "./browser-renderer": {
+      "import": "./dist/browser-renderer.js",
+      "types": "./dist/browser-renderer.d.ts"
     }
   },
   "files": [
