--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "type": "module",
   "exports": {
+    "./dom": {
+      "import": "./dist/dom.js",
+      "types": "./dist/dom.d.ts"
+    },
     "./renderers/dom": {
       "import": "./dist/renderers/dom.js",
       "types": "./dist/renderers/dom.d.ts"
