--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -77,6 +77,10 @@
     "./devtools/batch": {
       "import": "./dist/devtools/batch.js",
       "types": "./dist/devtools/batch.d.ts"
+    },
+    "./presets/core": {
+      "import": "./dist/presets/core.js",
+      "types": "./dist/presets/core.d.ts"
     }
   },
   "files": [
