consolidate api creation

--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -61,6 +61,10 @@
     "./browser-renderer": {
       "import": "./dist/browser-renderer.js",
       "types": "./dist/browser-renderer.d.ts"
+    },
+    "./presets/core": {
+      "import": "./dist/presets/core.js",
+      "types": "./dist/presets/core.d.ts"
     }
   },
   "files": [
