--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -65,6 +65,10 @@
     "./presets/core": {
       "import": "./dist/presets/core.js",
       "types": "./dist/presets/core.d.ts"
+    },
+    "./devtools": {
+      "import": "./dist/devtools/index.js",
+      "types": "./dist/devtools/index.d.ts"
     }
   },
   "files": [
