--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -42,6 +42,10 @@
       "import": "./dist/constants.js",
       "types": "./dist/constants.d.ts"
     },
+    "./helpers": {
+      "import": "./dist/helpers.js",
+      "types": "./dist/helpers.d.ts"
+    },
     "./helpers/scheduler": {
       "import": "./dist/helpers/scheduler.js",
       "types": "./dist/helpers/scheduler.d.ts"
