--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -82,6 +82,10 @@
       "import": "./dist/devtools/batch.js",
       "types": "./dist/devtools/batch.d.ts"
     },
+    "./devtools/subscribe": {
+      "import": "./dist/devtools/subscribe.js",
+      "types": "./dist/devtools/subscribe.d.ts"
+    },
     "./presets/core": {
       "import": "./dist/presets/core.js",
       "types": "./dist/presets/core.d.ts"
