--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -9,6 +9,14 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./ssr-context": {
+      "import": "./dist/ssr-context.js",
+      "types": "./dist/ssr-context.d.ts"
+    },
+    "./types": {
+      "import": "./dist/types.js",
+      "types": "./dist/types.d.ts"
     }
   },
   "files": [
